--- a/pages_EF/AuthorPage.xaml
+++ b/pages_EF/AuthorPage.xaml
@@ -41,7 +41,7 @@
                     <RowDefinition/>
                     <RowDefinition Height="auto"/>
                 </Grid.RowDefinitions>
-                <TextBox Text="{Binding Path=CurrentNameSorting, UpdateSourceTrigger=PropertyChanged}" Margin="8" FontSize="16" FontFamily="Sans"/>
+                <TextBox TextChanged="OnSortingString_Changed" Text="{Binding Path=CurrentNameSorting, UpdateSourceTrigger=PropertyChanged}" Margin="8" FontSize="16" FontFamily="Sans"/>
                 <ComboBox Name="NameSelection" SelectionChanged="OnSelectedFilter_Changed" SelectedItem="{Binding CurrentNameFilter}" Grid.Row="1"/>
             </Grid>
 
@@ -52,7 +52,7 @@
                     <RowDefinition/>
                     <RowDefinition Height="auto"/>
                 </Grid.RowDefinitions>
-                <TextBox Text="{Binding Path=CurrentSurnameSorting, UpdateSourceTrigger=PropertyChanged}" Margin="8" FontSize="16" FontFamily="Sans" TextWrapping="Wrap" MaxHeight="150"/>
+                <TextBox TextChanged="OnSortingString_Changed" Text="{Binding Path=CurrentSurnameSorting, UpdateSourceTrigger=PropertyChanged}" Margin="8" FontSize="16" FontFamily="Sans" TextWrapping="Wrap" MaxHeight="150"/>
                 <ComboBox Name="SurnameSelection" SelectionChanged="OnSelectedFilter_Changed" SelectedItem="{Binding CurrentSurnameFilter}" Grid.Row="1"/>
             </Grid>
 
@@ -63,7 +63,7 @@
                     <RowDefinition/>
                     <RowDefinition Height="auto"/>
                 </Grid.RowDefinitions>
-                <TextBox Text="{Binding Path=CurrentPatronymicSorting, UpdateSourceTrigger=PropertyChanged}" Margin="8" FontSize="16" FontFamily="Sans" TextWrapping="Wrap" MaxHeight="150"/>
+                <TextBox TextChanged="OnSortingString_Changed" Text="{Binding Path=CurrentPatronymicSorting, UpdateSourceTrigger=PropertyChanged}" Margin="8" FontSize="16" FontFamily="Sans" TextWrapping="Wrap" MaxHeight="150"/>
                 <ComboBox Name="PatronymicSelection" SelectionChanged="OnSelectedFilter_Changed" SelectedItem="{Binding CurrentPatronymicFilter}" Grid.Row="1"/>
             </Grid>
 
@@ -74,13 +74,13 @@
                     <RowDefinition/>
                     <RowDefinition Height="auto"/>
                 </Grid.RowDefinitions>
-                <TextBox Text="{Binding Path=CurrentNicknameSorting, UpdateSourceTrigger=PropertyChanged}" Margin="8,8,8,8" FontSize="16" FontFamily="Sans" TextWrapping="Wrap" MaxHeight="150"/>
+                <TextBox TextChanged="OnSortingString_Changed" Text="{Binding Path=CurrentNicknameSorting, UpdateSourceTrigger=PropertyChanged}" Margin="8,8,8,8" FontSize="16" FontFamily="Sans" TextWrapping="Wrap" MaxHeight="150"/>
                 <ComboBox Name="NicknameSelection" SelectionChanged="OnSelectedFilter_Changed" SelectedItem="{Binding CurrentNicknameFilter}" Grid.Row="1"/>
             </Grid>
 
             <CheckBox Name="AgeSortEnable" Grid.Row="5" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="12" Command="{Binding changeEnableAgeSortCommand}" CommandParameter="{Binding RelativeSource={RelativeSource Self}, Path=IsChecked}" />
             <TextBlock Grid.Column="1" Text="Age:" Grid.Row="5" FontSize="16" FontFamily="Sans" Padding="8"  TextAlignment="Center"/>
-            <TextBox Grid.Column="2" Grid.Row="5" Margin="8" FontSize="16" FontFamily="Sans" TextWrapping="Wrap" MaxHeight="150">
+            <TextBox TextChanged="OnSortingString_Changed" Grid.Column="2" Grid.Row="5" Margin="8" FontSize="16" FontFamily="Sans" TextWrapping="Wrap" MaxHeight="150">
                 <TextBox.Text>
                     <Binding Path="CurrentAgeSorting" UpdateSourceTrigger="PropertyChanged" NotifyOnValidationError="True">
                         <Binding.ValidationRules>
